export explosion property for pie chart property, tdf#114182

Change-Id: I02b46929db1bfbff32e7b1228186079b868e7971
Reviewed-on: https://gerrit.libreoffice.org/47154
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>